added spectrum jquery color picker, adjusted styling for controls sidebar

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,7 +3,12 @@
 @import "functions";
 @import "variables";
 
+//library of scss files
+@import "lib/spectrum";
+
+//modules
 @import "module/controls";
 @import "module/stage";
 
+//layout
 @import "layout/main";
