update to header and footer content

--- a/src/scss/module/_controls.scss
+++ b/src/scss/module/_controls.scss
@@ -3,9 +3,10 @@
   border: 1px solid $gray;
   padding: 1em;
   @media (min-width: em(992)) {
-    float: left;
+    float: right;
     width: 25%;
     margin-left: 4%;
+    clear: right;
   }
   textarea {
     width: 100%;
@@ -14,11 +15,14 @@
   div[class$="-controls"] {
     border-bottom: 1px solid $gray;
     padding-bottom: 1em;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     h2 {
       font-weight: 400;
       font-size: em(20);
       margin: 0 0 em(11, 20);
+      span {
+        font-weight: bold;
+      }
     }
   }
   button {
