--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -9,6 +9,7 @@ body {
   max-width: $sheet-width;
   margin-left: auto;
   margin-right: auto;
+  clear: both;
 }
 
 img {
@@ -19,6 +20,7 @@ img {
 
 main {
   margin: em(30) 0;
+  overflow: auto;
   @media (max-width: #{$sheet-width + 60}) {
     padding: 0 em(30);
   }
