update to controls module

--- a/src/scss/module/_controls.scss
+++ b/src/scss/module/_controls.scss
@@ -29,7 +29,8 @@
     border-radius: 0;
     display: inline-block;
     font-size: em(14);
-    margin: em(6) em(3);
+    margin: em(6, 14) em(3, 14);
+    padding: em(5, 14);
     background-color: $offwhite;
     border: 2px solid $gray;
     text-transform: lowercase;
